--- a/3-CSS/304-CSS-BOX-MODEL/CSS-304-02/style.css
+++ b/3-CSS/304-CSS-BOX-MODEL/CSS-304-02/style.css
@@ -1,1 +1,44 @@
-/* start your css here */
+*{
+    box-sizing: border-box;
+    margin: 0;
+    padding:5px;
+}
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+  -webkit-appearance: none; 
+  margin: 0; 
+}
+.main-container{
+    background-color: black;
+    width:600px;
+    height: 550px;
+    padding:10px 40px;
+}
+.input{
+    width:500px;
+    height: 60px;
+    padding: 20px;
+}
+.check{
+    height: 30px;
+    width: 30px;
+    border-radius: 25px;
+}
+#date{
+    background: url(date.jpg) no-repeat right center;
+    background-size: 2.0rem 2.0rem;
+    background-color: white;
+    padding-right: 10px;
+}
+.button{
+    display: flex;
+    justify-content: center;
+}
+.submit{
+    height: 55px;
+    width: 200px;
+    border: 3px solid white;
+    background-color: black;
+    color:white;
+    font-size: 22px;
+}
