--- a/3-CSS/304-CSS-BOX-MODEL/CSS-304-02/style.css
+++ b/3-CSS/304-CSS-BOX-MODEL/CSS-304-02/style.css
@@ -25,7 +25,7 @@ input[type=number]::-webkit-outer-spin-button {
     border-radius: 25px;
 }
 #date{
-    background: url(date.jp) no-repeat right center;
+    background: url(date.jpg) no-repeat right center;
     background-size: 2.0rem 2.0rem;
     background-color: white;
     padding-right: 10px;
