--- a/3-CSS/305-CSS-Flexbox/CSS-305-01/style.css
+++ b/3-CSS/305-CSS-Flexbox/CSS-305-01/style.css
@@ -13,6 +13,9 @@ body{
     background-color: #0a0a23;
     color: #fff;
     border-bottom: 4px solid #fdb347;
+}
+.header h1{
+    font-size: 1.5em;
 }  
 .gallery{
     display: flex;
