--- a/3-CSS/305-CSS-Flexbox/CSS-305-02/style.css
+++ b/3-CSS/305-CSS-Flexbox/CSS-305-02/style.css
@@ -1,1 +1,43 @@
-/* start your styling here  */
+*{
+    box-sizing: border-box;
+}
+.main{
+    background-color:rgba(122, 38, 201, 0.863); 
+    width:300px; 
+    height: 250px; 
+    display: flex; 
+    justify-content: center; 
+    align-items: center;
+}
+.main-container{
+    width:260px;
+    height: 220px;
+    background-color: rgb(230, 71, 97);
+    border-radius: 8px;
+    padding:10px;
+    box-shadow: 0px 4px rgba(0,0,0,0.5);
+}
+.onoff{
+    background-color: rgb(226, 226, 9);
+}
+header{
+    padding:0 6px 6px 5px;
+    display: flex;
+    justify-content: space-between;
+}
+input{
+    width:150px;
+    border-radius: 10px;
+    background-color: rgba(122, 38, 201, 0.863);
+    border:none;
+}
+button{
+    font-size: 20px;
+    background-color:rgba(122, 38, 201, 0.863);
+    width: 52px;
+    height: 30px;
+    margin:2px;
+    border-radius: 10px;
+    border: none;
+    box-shadow: 0px 3px rgba(0,0,0,0.5);
+}
