--- a/3-CSS/305-CSS-Flexbox/CSS-305-02/style.css
+++ b/3-CSS/305-CSS-Flexbox/CSS-305-02/style.css
@@ -17,7 +17,7 @@
     padding:10px;
     box-shadow: 0px 4px rgba(0,0,0,0.5);
 }
-.onoff{
+.onoff,.op{
     background-color: rgb(255, 209, 104);
 }
 header{
