--- a/3-CSS/305-CSS-Flexbox/CSS-305-02/style.css
+++ b/3-CSS/305-CSS-Flexbox/CSS-305-02/style.css
@@ -19,6 +19,11 @@
 }
 .onoff,.op{
     background-color: rgb(255, 209, 104);
+    box-shadow: 0px 3px rgba(207,140,3,0.8);
+}
+.equal{
+    background-color: #05D6A0;
+    box-shadow: 0px 3px rgba(1,142,103,0.8);
 }
 header{
     padding:0 6px 6px 5px;
