--- a/3-CSS/305-CSS-Flexbox/CSS-305-02/style.css
+++ b/3-CSS/305-CSS-Flexbox/CSS-305-02/style.css
@@ -20,10 +20,12 @@
 .onoff,.op{
     background-color: rgb(255, 209, 104);
     box-shadow: 0px 3px rgba(207,140,3,0.8);
+    color: grey;
 }
 .equal{
     background-color: #05D6A0;
     box-shadow: 0px 3px rgba(1,142,103,0.8);
+    color: grey;
 }
 header{
     padding:0 6px 6px 5px;
@@ -42,6 +44,7 @@ button{
     width: 52px;
     height: 30px;
     margin:2px;
+    color: #fff;
     border-radius: 10px;
     border: none;
     box-shadow: 0px 3px rgba(0,0,0,0.5);
