--- a/3-CSS/305-CSS-Flexbox/CSS-305-02/style.css
+++ b/3-CSS/305-CSS-Flexbox/CSS-305-02/style.css
@@ -37,6 +37,7 @@ input{
     border-radius: 10px;
     background-color: rgba(38, 84, 123, 0.863);
     border:none;
+    color: #fff;
 }
 button{
     font-size: 15px;
