--- a/3-CSS/305-CSS-Flexbox/CSS-305-03/style.css
+++ b/3-CSS/305-CSS-Flexbox/CSS-305-03/style.css
@@ -1,1 +1,65 @@
-/* start your styling here  */
+*{
+    box-sizing: border-box;
+}
+.main-container{
+    width: 100%;
+    height: 50%;
+    padding:30px;
+    display: flex;
+}
+.firstbox{
+    width:33%;
+    height: 300px;
+    background-color: orange;
+    border-radius: 10px 0 0 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    padding:40px;
+}
+.secondbox{
+    width:33%;
+    height: 300px;
+    background-color: blueviolet;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    padding:40px;
+}
+.thirdbox{
+    width:33%;
+    height: 300px;
+    background-color: gray;
+    border-radius: 0 10px 10px 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    padding:40px;
+
+}
+h1{
+    color:white;
+}
+p{
+    color:white;
+}
+button{
+    border:none;
+    width: 100px;
+    height: 40px;
+    
+    border-radius: 42%;
+}
+.icon{
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    background-color: olivedrab;
+    position: relative;
+}
+img{
+    width:25px;
+    height:22px;
+    margin-left: 15px;
+    position: absolute;
+}
