--- a/3-CSS/305-CSS-Flexbox/CSS-305-03/style.css
+++ b/3-CSS/305-CSS-Flexbox/CSS-305-03/style.css
@@ -6,11 +6,12 @@
     height: 50%;
     padding:30px;
     display: flex;
+    justify-content: center;
 }
 .firstbox{
-    width:33%;
+    width:25%;
     height: 300px;
-    background-color: orange;
+    background-color: #E38826;
     border-radius: 10px 0 0 10px;
     display: flex;
     flex-direction: column;
@@ -18,18 +19,18 @@
     padding:40px;
 }
 .secondbox{
-    width:33%;
+    width:25%;
     height: 300px;
-    background-color: blueviolet;
+    background-color: #006970;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
     padding:40px;
 }
 .thirdbox{
-    width:33%;
+    width:25%;
     height: 300px;
-    background-color: gray;
+    background-color: #004241;
     border-radius: 0 10px 10px 0;
     display: flex;
     flex-direction: column;
