--- a/3-CSS/305-CSS-Flexbox/CSS-305-03/style.css
+++ b/3-CSS/305-CSS-Flexbox/CSS-305-03/style.css
@@ -47,8 +47,8 @@ p{
 button{
     border:none;
     width: 100px;
-    height: 40px;
-    border-radius: 25%;
+    height: 100px;
+    border-radius: 25px 25px 25px 25px;
 }
 .icon{
     width: 50px;
