--- a/3-CSS/305-CSS-Flexbox/CSS-305-03/style.css
+++ b/3-CSS/305-CSS-Flexbox/CSS-305-03/style.css
@@ -48,6 +48,7 @@ button{
     border:none;
     width: 100px;
     height: 100px;
+    color: transparent;
     border-radius: 25px 25px 25px 25px;
 }
 .icon{
