--- a/3-CSS/305-CSS-Flexbox/CSS-305-03/style.css
+++ b/3-CSS/305-CSS-Flexbox/CSS-305-03/style.css
@@ -9,7 +9,7 @@
     justify-content: center;
 }
 .firstbox{
-    width:25%;
+    width:250px;
     height: 350px;
     background-color: #E38826;
     border-radius: 10px 0 0 10px;
@@ -19,7 +19,7 @@
     padding:40px;
 }
 .secondbox{
-    width:25%;
+    width:250px;
     height: 350px;
     background-color: #006970;
     display: flex;
@@ -28,7 +28,7 @@
     padding:40px;
 }
 .thirdbox{
-    width:25%;
+    width:250px;
     height: 350px;
     background-color: #004241;
     border-radius: 0 10px 10px 0;
