--- a/3-CSS/305-CSS-Flexbox/CSS-305-03/style.css
+++ b/3-CSS/305-CSS-Flexbox/CSS-305-03/style.css
@@ -1,25 +1,25 @@
 *{
     box-sizing: border-box;
 }
-.main-container{
+.container{
     width: 100%;
     height: 50%;
     padding:30px;
     display: flex;
     justify-content: center;
 }
-.firstbox{
-    width:250px;
+.box-one{
+    width:330px;
     height: 350px;
     background-color: #E38826;
-    border-radius: 10px 0 0 10px;
+    border-radius: 20px 0 0 20px;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
     padding:40px;
 }
-.secondbox{
-    width:250px;
+.box-two{
+    width:335px;
     height: 350px;
     background-color: #006970;
     display: flex;
@@ -27,11 +27,11 @@
     justify-content: space-evenly;
     padding:40px;
 }
-.thirdbox{
-    width:250px;
+.box-three{
+    width:335px;
     height: 350px;
     background-color: #004241;
-    border-radius: 0 10px 10px 0;
+    border-radius: 0 20px 20px 0;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
@@ -51,15 +51,15 @@ button{
     border-radius: 25px 25px 25px 25px;
 }
 .icon{
-    width: 50px;
-    height: 50px;
+    width: 30px;
+    height: 30px;
     border-radius: 50%;
     background-color: olivedrab;
     position: relative;
 }
 img{
-    width:30px;
-    height:27px;
+    width:45px;
+    height:42px;
     margin-left: 15px;
     position: absolute;
 }
