--- a/3-CSS/304-CSS-BOX-MODEL/CSS-304-04/index.css
+++ b/3-CSS/304-CSS-BOX-MODEL/CSS-304-04/index.css
@@ -1,1 +1,33 @@
-/* start your css here */
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+.container{
+    width: 100%;
+    height: 50px;
+    background-color:rgb(13, 6, 32);
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    margin-right: 100px;
+}
+.container p{
+    color: rgb(157, 154, 165);
+    font-size: 20px;
+}
+i{
+    height: 20px;
+    width: 20px;
+    color:white;
+    margin: 10px 0 0 0;
+  }
+.icons{
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+p:hover{
+    color:white;
+}
