--- a/3-CSS/306-CSS-Grid/CSS-306-03/style.css
+++ b/3-CSS/306-CSS-Grid/CSS-306-03/style.css
@@ -1,1 +1,108 @@
-/* start your styling here  */
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+body{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.container{
+    height: 100vh;
+    width: 90vw;
+    display: flex;
+    flex-direction: column;
+}
+.nav{
+    height: 17%;
+    border-bottom: 3px solid rgb(41, 28, 19);
+    width: 100%;
+}
+.box-1{
+    width: 100%;
+    height: 45%;
+    border-bottom: 3px solid rgb(41, 28, 19);
+    display: flex;
+}
+.box-2{
+    width: 100%;
+    height: 30%;
+    border-bottom: 3px solid rgb(41, 28, 19);
+    display: flex;
+}
+.imgboxA{
+    width: 30%;
+    height: 100%;
+    border-right: 3px solid rgb(41, 28, 19);
+}
+.imgboxB{
+    width: 40%;
+    height: 100%;
+    border-right: 3px solid rgb(41, 28, 19);
+}
+.imgboxC{
+    width: 30%;
+    height: 100%;
+}
+.sqbox-1{
+    width: 50%;
+    height: 100%;
+    border-right: 3px solid rgb(41, 28, 19);
+    display: flex;
+    flex-direction: column;
+}
+.sqbox-2{
+    width: 50%;
+    height: 100%;
+    display: flex;
+}
+.sqboxtop{
+    width: 100%;
+    height: 40%;
+    border-bottom: 3px solid rgb(41, 28, 19);
+    display: flex;
+}
+.sqboxtopA{
+    width: 45%;
+    height: 100%;
+    border-right: 3px solid rgb(41, 28, 19);
+}
+.sqboxtopB{
+    width: 55%;
+    height: 100%;
+}
+.sqboxbot{
+    width: 100%;
+    height: 60%;
+    display: flex;
+}
+.sqboxbotA{
+    width: 55%;
+    height: 100%;
+    border-right: 3px solid rgb(41, 28, 19);
+}
+.sqboxbotB{
+    width: 45%;
+    height: 100%;
+}
+.sqboxl{
+    width: 35%;
+    height: 100%;
+    border-right: 3px solid rgb(41, 28, 19);
+}
+.sqboxr{
+    width: 65%;
+    height: 100%;
+}
+.footer{
+    width: 100%;
+    height: 8%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.navbar,.sole,.tuesday,.twitter,.open,.upcoming,.story,.gallery,.facts,.foods,.footer{
+    width: 100%;
+    height: 100%;
+}
