--- a/3-CSS/308-CSS-Pseudo-Classes/CSS-308-01/style.css
+++ b/3-CSS/308-CSS-Pseudo-Classes/CSS-308-01/style.css
@@ -1,1 +1,69 @@
-/* start your styling here  */
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+main{
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    align-items: center;
+    margin-top: 5%;
+}
+h1{
+    font-size: 300%;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+ }
+ .row{
+    display: flex;
+    align-items: center;
+    gap: 5px;
+ }
+ button{
+    height: 40px;
+    width: 100px;
+    background-color: white;
+ }
+ .button-1{
+    border: 2px solid #04aa6d;
+    color: #04aa6d;
+ }
+ .button-1:hover{
+    color: white;
+    background-color: #04aa6d;
+ }
+ .button-2{
+    width: 80px;
+    border: 2px solid #2196f3;
+    color: #2196f3;
+ }
+ .button-2:hover{
+    color: white;
+    background-color: #2196f3;
+ }
+ .button-3{
+    border: 2px solid #ff9800;
+    color: #ff9800;
+ }
+ .button-3:hover{
+    color: white;
+    background-color: #ff9800;
+ }
+ .button-4{
+    width: 90px;
+    border: 2px solid #f44336;
+    color: #f44336;
+ }
+ .button-4:hover{
+    color: white;
+    background-color: #f44336;
+ }
+ .button-5{
+    width: 90px;
+    border: 2px solid #e7e7e7;
+    color: black;
+ } 
+ .button-5:hover{
+    color: black;
+    background-color: #e7e7e7;
+ }
