--- a/3-CSS/308-CSS-Pseudo-Classes/CSS-308-02/style.css
+++ b/3-CSS/308-CSS-Pseudo-Classes/CSS-308-02/style.css
@@ -1,1 +1,55 @@
-/* start your styling here  */
+body{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 5%;
+}
+.container{
+    width: 15vw;
+    height: 10vh;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+} 
+.dropdown{
+    position: relative;
+    display: inline-block;
+    height: 20vh;
+    width: 20vw;
+    display: flex;
+    gap: 12px;
+}
+.dropbtn{
+    background-color: #F4511E;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    width: 100%;
+    height: 50%;
+}
+.dropbtn:hover{
+    background-color: #F44334;
+}
+.dropdown-content{
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 200px;
+    margin-top: 10vh;
+    margin-left: 35px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+.dropdown-content a{
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+.dropdown-content a:hover{
+    background-color: #ddd;
+}
+.dropdown:hover .dropdown-content{
+    display: block;
+}
