--- a/4-Advance-JS/403-event-listeners/AdvanceJS-403-03/style.css
+++ b/4-Advance-JS/403-event-listeners/AdvanceJS-403-03/style.css
@@ -10,8 +10,8 @@ body{
 }
 .content{
     width: 400px;
-    margin: 40px auto 0;
-    padding: 50px;
+    margin: 10px auto 0;
+    padding: 30px;
     box-sizing: border-box;
     background: url(https://i.postimg.cc/sDNRp4HD/paper-pattern.jpg)top left repeat;
     box-shadow: 0 10px 15px -8px #000;
@@ -19,9 +19,9 @@ body{
     text-align: center;
 }
 h1{
-    margin: 0 0 20px;
-    padding: 0 0 20px;
-    border-bottom: solid 1px #ddd
+    margin: 0 0 10px;
+    padding: 0 0 10px;
+    border-bottom: solid 1px #ddd;
 }
 form{
     text-align: left;
